// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tasks Reducer BUSY_TASK should mark the task as busy 1`] = `
Immutable.List [
  Immutable.Map {
    "id": "1",
    "state": "created",
    "debut": 1475954335,
    "strategy": Immutable.Map {
      "type": "shell",
      "command": "",
      "cwd": "",
    },
    "plan": Immutable.Map {
      "config": 2,
      "packageInfos": Immutable.Map {
        "name": "root",
        "type": "file",
        "path": "/",
      },
      "stager": Immutable.Map {
        "type": "integrated",
        "host": null,
      },
      "tool": Immutable.Map {
        "id": "1",
        "name": "tool",
        "iconUri": "",
      },
    },
    "step": 1,
  },
  Immutable.Map {
    "id": "2",
    "state": "running",
    "debut": 1475954335,
    "strategy": Immutable.Map {
      "type": "shell",
      "command": "",
      "cwd": "",
    },
    "plan": Immutable.Map {
      "config": 2,
      "packageInfos": Immutable.Map {
        "name": "root",
        "type": "file",
        "path": "/",
      },
      "stager": Immutable.Map {
        "type": "integrated",
        "host": null,
      },
      "tool": Immutable.Map {
        "id": "1",
        "name": "tool",
        "iconUri": "",
      },
    },
    "step": 1,
    "busy": true,
  },
  Immutable.Map {
    "id": "3",
    "state": "created",
    "debut": 1475954335,
    "strategy": Immutable.Map {
      "type": "shell",
      "command": "",
      "cwd": "",
    },
    "plan": Immutable.Map {
      "config": 2,
      "packageInfos": Immutable.Map {
        "name": "root",
        "type": "file",
        "path": "/",
      },
      "stager": Immutable.Map {
        "type": "integrated",
        "host": null,
      },
      "tool": Immutable.Map {
        "id": "1",
        "name": "tool",
        "iconUri": "",
      },
    },
    "step": 1,
  },
]
`;

exports[`Tasks Reducer CRASH_TASK should mark the task as crashed 1`] = `
Array [
  Object {
    "debut": 1475954335,
    "id": "1",
    "plan": Object {
      "config": 2,
      "packageInfos": Object {
        "name": "root",
        "path": "/",
        "type": "file",
      },
      "stager": Object {
        "host": null,
        "type": "integrated",
      },
      "tool": Object {
        "iconUri": "",
        "id": "1",
        "name": "tool",
      },
    },
    "state": "created",
    "step": 1,
    "strategy": Object {
      "command": "",
      "cwd": "",
      "type": "shell",
    },
  },
  Object {
    "debut": 1475954335,
    "end": 1475954336,
    "id": "2",
    "plan": Object {
      "config": 2,
      "packageInfos": Object {
        "name": "root",
        "path": "/",
        "type": "file",
      },
      "stager": Object {
        "host": null,
        "type": "integrated",
      },
      "tool": Object {
        "iconUri": "",
        "id": "1",
        "name": "tool",
      },
    },
    "state": "crashed",
    "step": 1,
    "strategy": Object {
      "command": "",
      "cwd": "",
      "type": "shell",
    },
  },
  Object {
    "debut": 1475954335,
    "id": "3",
    "plan": Object {
      "config": 2,
      "packageInfos": Object {
        "name": "root",
        "path": "/",
        "type": "file",
      },
      "stager": Object {
        "host": null,
        "type": "integrated",
      },
      "tool": Object {
        "iconUri": "",
        "id": "1",
        "name": "tool",
      },
    },
    "state": "created",
    "step": 1,
    "strategy": Object {
      "command": "",
      "cwd": "",
      "type": "shell",
    },
  },
]
`;

exports[`Tasks Reducer FAIL_TASK should mark the task as failed 1`] = `
Array [
  Object {
    "debut": 1475954335,
    "id": "1",
    "plan": Object {
      "config": 2,
      "packageInfos": Object {
        "name": "root",
        "path": "/",
        "type": "file",
      },
      "stager": Object {
        "host": null,
        "type": "integrated",
      },
      "tool": Object {
        "iconUri": "",
        "id": "1",
        "name": "tool",
      },
    },
    "state": "created",
    "step": 1,
    "strategy": Object {
      "command": "",
      "cwd": "",
      "type": "shell",
    },
  },
  Object {
    "debut": 1475954335,
    "end": 1475954336,
    "id": "2",
    "plan": Object {
      "config": 2,
      "packageInfos": Object {
        "name": "root",
        "path": "/",
        "type": "file",
      },
      "stager": Object {
        "host": null,
        "type": "integrated",
      },
      "tool": Object {
        "iconUri": "",
        "id": "1",
        "name": "tool",
      },
    },
    "state": "failed",
    "step": 1,
    "strategy": Object {
      "command": "",
      "cwd": "",
      "type": "shell",
    },
  },
  Object {
    "debut": 1475954335,
    "id": "3",
    "plan": Object {
      "config": 2,
      "packageInfos": Object {
        "name": "root",
        "path": "/",
        "type": "file",
      },
      "stager": Object {
        "host": null,
        "type": "integrated",
      },
      "tool": Object {
        "iconUri": "",
        "id": "1",
        "name": "tool",
      },
    },
    "state": "created",
    "step": 1,
    "strategy": Object {
      "command": "",
      "cwd": "",
      "type": "shell",
    },
  },
]
`;

exports[`Tasks Reducer START_TASK should mark the task as started 1`] = `
Array [
  Object {
    "debut": 1475954335,
    "id": "1",
    "plan": Object {
      "config": 2,
      "packageInfos": Object {
        "name": "root",
        "path": "/",
        "type": "file",
      },
      "stager": Object {
        "host": null,
        "type": "integrated",
      },
      "tool": Object {
        "iconUri": "",
        "id": "1",
        "name": "tool",
      },
    },
    "state": "created",
    "step": 1,
    "strategy": Object {
      "command": "",
      "cwd": "",
      "type": "shell",
    },
  },
  Object {
    "debut": 1475954335,
    "end": undefined,
    "id": "2",
    "plan": Object {
      "config": 2,
      "packageInfos": Object {
        "name": "root",
        "path": "/",
        "type": "file",
      },
      "stager": Object {
        "host": null,
        "type": "integrated",
      },
      "tool": Object {
        "iconUri": "",
        "id": "1",
        "name": "tool",
      },
    },
    "state": "running",
    "step": 1,
    "strategy": Object {
      "command": "",
      "cwd": "",
      "type": "shell",
    },
  },
  Object {
    "debut": 1475954335,
    "id": "3",
    "plan": Object {
      "config": 2,
      "packageInfos": Object {
        "name": "root",
        "path": "/",
        "type": "file",
      },
      "stager": Object {
        "host": null,
        "type": "integrated",
      },
      "tool": Object {
        "iconUri": "",
        "id": "1",
        "name": "tool",
      },
    },
    "state": "created",
    "step": 1,
    "strategy": Object {
      "command": "",
      "cwd": "",
      "type": "shell",
    },
  },
]
`;

exports[`Tasks Reducer STOP_TASK should mark the task as stopped 1`] = `
Array [
  Object {
    "debut": 1475954335,
    "id": "1",
    "plan": Object {
      "config": 2,
      "packageInfos": Object {
        "name": "root",
        "path": "/",
        "type": "file",
      },
      "stager": Object {
        "host": null,
        "type": "integrated",
      },
      "tool": Object {
        "iconUri": "",
        "id": "1",
        "name": "tool",
      },
    },
    "state": "created",
    "step": 1,
    "strategy": Object {
      "command": "",
      "cwd": "/ok",
      "type": "shell",
    },
  },
  Object {
    "debut": 1475954335,
    "end": 1475954336,
    "id": "2",
    "plan": Object {
      "config": 2,
      "packageInfos": Object {
        "name": "root",
        "path": "/",
        "type": "file",
      },
      "stager": Object {
        "host": null,
        "type": "integrated",
      },
      "tool": Object {
        "iconUri": "",
        "id": "1",
        "name": "tool",
      },
    },
    "state": "stopped",
    "step": 1,
    "strategy": Object {
      "command": "",
      "cwd": "/ok",
      "type": "shell",
    },
  },
  Object {
    "debut": 1475954335,
    "id": "3",
    "plan": Object {
      "config": 2,
      "packageInfos": Object {
        "name": "root",
        "path": "/",
        "type": "file",
      },
      "stager": Object {
        "host": null,
        "type": "integrated",
      },
      "tool": Object {
        "iconUri": "",
        "id": "1",
        "name": "tool",
      },
    },
    "state": "created",
    "step": 1,
    "strategy": Object {
      "command": "",
      "cwd": "/ok",
      "type": "shell",
    },
  },
]
`;

exports[`Tasks Reducer STOP_TASK_OF_PLAN should mark the task as stopped 1`] = `
Array [
  Object {
    "debut": 1475954335,
    "id": "1",
    "plan": Object {
      "config": 2,
      "packageInfos": Object {
        "name": "root",
        "path": "/",
        "type": "file",
      },
      "stager": Object {
        "host": null,
        "type": "integrated",
      },
      "tool": Object {
        "iconUri": "",
        "id": "1",
        "name": "tool",
      },
    },
    "state": "created",
    "step": 1,
    "strategy": Object {
      "command": "",
      "cwd": "",
      "type": "shell",
    },
  },
  Object {
    "debut": 1475954335,
    "end": 1475954336,
    "id": "2",
    "plan": Object {
      "config": 2,
      "packageInfos": Object {
        "name": "root",
        "path": "/",
        "type": "file",
      },
      "stager": Object {
        "host": null,
        "type": "integrated",
      },
      "tool": Object {
        "iconUri": "",
        "id": "2",
        "name": "tool",
      },
    },
    "state": "stopped",
    "step": 1,
    "strategy": Object {
      "command": "",
      "cwd": "",
      "type": "shell",
    },
  },
  Object {
    "debut": 1475954335,
    "id": "3",
    "plan": Object {
      "config": 2,
      "packageInfos": Object {
        "name": "root",
        "path": "/",
        "type": "file",
      },
      "stager": Object {
        "host": null,
        "type": "integrated",
      },
      "tool": Object {
        "iconUri": "",
        "id": "1",
        "name": "tool",
      },
    },
    "state": "created",
    "step": 1,
    "strategy": Object {
      "command": "",
      "cwd": "",
      "type": "shell",
    },
  },
]
`;

exports[`Tasks Reducer SUCCEED_TASK should mark the task as succeed 1`] = `
Array [
  Object {
    "debut": 1475954335,
    "id": "1",
    "plan": Object {
      "config": 2,
      "packageInfos": Object {
        "name": "root",
        "path": "/",
        "type": "file",
      },
      "stager": Object {
        "host": null,
        "type": "integrated",
      },
      "tool": Object {
        "iconUri": "",
        "id": "1",
        "name": "tool",
      },
    },
    "state": "created",
    "step": 1,
    "strategy": Object {
      "command": "",
      "cwd": "",
      "type": "shell",
    },
  },
  Object {
    "debut": 1475954335,
    "end": 1475954336,
    "id": "2",
    "plan": Object {
      "config": 2,
      "packageInfos": Object {
        "name": "root",
        "path": "/",
        "type": "file",
      },
      "stager": Object {
        "host": null,
        "type": "integrated",
      },
      "tool": Object {
        "iconUri": "",
        "id": "1",
        "name": "tool",
      },
    },
    "state": "succeed",
    "step": 1,
    "strategy": Object {
      "command": "",
      "cwd": "",
      "type": "shell",
    },
  },
  Object {
    "debut": 1475954335,
    "id": "3",
    "plan": Object {
      "config": 2,
      "packageInfos": Object {
        "name": "root",
        "path": "/",
        "type": "file",
      },
      "stager": Object {
        "host": null,
        "type": "integrated",
      },
      "tool": Object {
        "iconUri": "",
        "id": "1",
        "name": "tool",
      },
    },
    "state": "created",
    "step": 1,
    "strategy": Object {
      "command": "",
      "cwd": "",
      "type": "shell",
    },
  },
]
`;

exports[`Tasks Reducer WAITING_TASK should mark the task as waiting 1`] = `
Immutable.List [
  Immutable.Map {
    "id": "1",
    "state": "created",
    "debut": 1475954335,
    "strategy": Immutable.Map {
      "type": "shell",
      "command": "",
      "cwd": "",
    },
    "plan": Immutable.Map {
      "config": 2,
      "packageInfos": Immutable.Map {
        "name": "root",
        "type": "file",
        "path": "/",
      },
      "stager": Immutable.Map {
        "type": "integrated",
        "host": null,
      },
      "tool": Immutable.Map {
        "id": "1",
        "name": "tool",
        "iconUri": "",
      },
    },
    "step": 1,
  },
  Immutable.Map {
    "id": "2",
    "state": "running",
    "debut": 1475954335,
    "strategy": Immutable.Map {
      "type": "shell",
      "command": "",
      "cwd": "",
    },
    "plan": Immutable.Map {
      "config": 2,
      "packageInfos": Immutable.Map {
        "name": "root",
        "type": "file",
        "path": "/",
      },
      "stager": Immutable.Map {
        "type": "integrated",
        "host": null,
      },
      "tool": Immutable.Map {
        "id": "1",
        "name": "tool",
        "iconUri": "",
      },
    },
    "step": 1,
    "busy": false,
  },
  Immutable.Map {
    "id": "3",
    "state": "created",
    "debut": 1475954335,
    "strategy": Immutable.Map {
      "type": "shell",
      "command": "",
      "cwd": "",
    },
    "plan": Immutable.Map {
      "config": 2,
      "packageInfos": Immutable.Map {
        "name": "root",
        "type": "file",
        "path": "/",
      },
      "stager": Immutable.Map {
        "type": "integrated",
        "host": null,
      },
      "tool": Immutable.Map {
        "id": "1",
        "name": "tool",
        "iconUri": "",
      },
    },
    "step": 1,
  },
]
`;
